--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   provider: ^6.1.2
   redux: ^5.0.0
   riverpod: ^2.5.1
+  device_preview: ^1.2.0
 
 dev_dependencies:
   flutter_test:
